Fixed SlideBar Scrollbar

--- a/src/App.scss
+++ b/src/App.scss
@@ -86,6 +86,7 @@ body {
   background: #000;
   padding: 2.5em 1.5em 0;
   font-size: 1.15em;
+  overflow: unset !important ;
 }
 
 /* Morph shape necessary with bubble or elastic */
